k8s/basketapi/basketapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
  namespace: daprdotnetjourney
  labels:
    app: basketapi
    service: basketapi
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: basketapi
