k8s/basketapi/basketapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basketapi-ingress
  namespace: daprdotnetjourney
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 102400m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.org/proxy-connect-timeout: 30s
    nginx.org/proxy-read-timeout: 20s
spec:
  #tls:
  #- hosts:
  #  - aggregator.daprdotnetjourney.com
  #  secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: aggregator.daprdotnetjourney.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basketapi-svc
            port:
              number: 80
